--- a/mod2_solution/css/style.css
+++ b/mod2_solution/css/style.css
@@ -1,6 +1,46 @@
 h1{
-    background-color:blue;
-    color:white;
-    border:5px yellow;
+    text-align: center;
+    font-style: italic;
     
+}
+*{
+    box-sizing: border-box;
+    margin:0;
+    padding:0;
+}
+#box{
+    border: 3px solid black;
+    margin:50px 30px 30px 10px;
+    float:left;
+    background-color: rgb(192, 189, 192);
+    width:400px;
+    position: relative;
+    
+}
+.heading{
+    display:inline;
+    border-bottom: solid black;
+    border-left: solid black;
+    text-align: center;
+    width:100px;
+    position: absolute;
+    top:0;
+    right:0;
+}
+#p1{
+    background-color: burlywood;
+    color: white;
+}
+#p2{
+    background-color: coral;
+}
+#p3{
+    background-color: cornsilk;
+    
+}
+#content{
+    clear:right;
+    padding:30px 10px 10px 10px;
+    
+
 }
