--- a/mod2_solution/css/style.css
+++ b/mod2_solution/css/style.css
@@ -8,12 +8,12 @@ h1{
     margin:0;
     padding:0;
 }
-#box{
+.box{
     border: 3px solid black;
-    margin:50px 30px 30px 10px;
-    float:left;
     background-color: rgb(192, 189, 192);
-    width:400px;
+    height:155px;
+    float:left;
+    width:90%;
     position: relative;
     
 }
@@ -40,7 +40,33 @@ h1{
 }
 #content{
     clear:right;
-    padding:30px 10px 10px 10px;
+    padding:25px 5px 0px 5px;
     
 
+}
+@media (min-width: 992px){
+    .col-lg-3{
+        float:left;
+        margin:50px 20px 0px 50px;
+        width:25%;
+    }
+}
+@media (max-width: 991px) and (min-width: 768px){
+    .col-md-6{
+        float:left;
+        margin:50px 40px 10px 50px;
+        width:33%;
+    }
+    .col-md-12{
+        float:left;
+        margin:60px 50px 50px 50px;
+        width:75%;
+    }
+}
+@media (max-width: 767px){
+    .col-sm-12{
+        float:left;
+        margin:10px 10px 10px 10px;
+        width:90%;
+    }
 }
